--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "chromium-updater",
+  "name": "chromium-update-notifier",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format:eslint": "eslint --ext .js,.vue public/ src/ --fix",
+    "format:prettier": "prettier --write --log-level warn 'src/**/*.js' 'src/**/*.vue' 'public/**/*.js'",
+    "format": "npm run format:prettier && npm run format:eslint"
   },
   "dependencies": {
-    "vue": "^3.3.11"
-  },
-  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.1",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vue": "^3.3.11"
   }
 }
