--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,10 +26,11 @@
     "page": "options.html",
     "open_in_tab": true
   },
+  "update_url": "https://raw.githubusercontent.com/claudiodekker/chromium-update-notifier/master/updates.xml",
   "permissions": [
     "alarms",
     "downloads",
     "storage"
   ],
-  "version": "1.0.0"
+  "version": "0.0.0"
 }
