--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,65 +4,43 @@ on:
   push:
     branches:
       - master
+
   pull_request:
-    types: [opened, reopened, synchronize]
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/master' && github.run_id || github.event.pull_request.number }}
-  cancel-in-progress: true
-
+    types: [opened, reopened, synchronize, ready_for_review]
+    
 jobs:
   check_build:
     name: Check build
     runs-on: ubuntu-latest
-
+    if: ${{ github.event_name == 'push' || github.event.pull_request.draft == false }}
+    concurrency:
+      group: build-${{ github.event.pull_request.number || github.ref }}
+      cancel-in-progress: true
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: package-lock.json
-
-      - name: Install NPM project dependencies
-        run: npm install
-
-      - name: Run build
-        run: npm run build
-
-  release_drafter:
-    if: github.ref == 'refs/heads/master'
-    name: Release Drafter
-    runs-on: ubuntu-latest
-    timeout-minutes: 1
-    permissions:
-      contents: write
-      pull-requests: write
-    steps:
-      - uses: release-drafter/release-drafter@b1476f6e6eb133afa41ed8589daba6dc69b4d3f5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: npm ci
+      - run: npm run build
 
   dependabot:
-    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
-    needs: [check_build]
-    name: Merge Dependabot MINOR/PATCH
+    name: Auto-merge Dependabot MINOR/PATCH
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request' && github.actor == 'dependabot[bot]' }}
+    needs: check_build
     timeout-minutes: 5
-
     permissions:
       contents: write
       pull-requests: write
-
     steps:
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v2
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Auto-merge Dependabot PRs for semver-minor updates
         if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-minor' }}
