--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.21.1",
+    "eslint": "^9.32.0",
+    "eslint-plugin-vue": "^10.4.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
@@ -24,5 +24,10 @@
     "tailwindcss": "^3.4.1",
     "vite": "^7.1.0",
     "vue": "^3.3.11"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
+    "globals": "^16.3.0"
   }
 }
